# kv_cli

./: Cargo.toml  README.md  build.rs  todo.md
.github/workflows/: release.yaml  release.yml  security-review.yml
.tools/: increment_major.sh  increment_minor.sh  version.sh
src/: client.rs  config.rs  crypto.rs  fzf.rs  main.rs
src/commands/: device.rs  keys.rs  kv.rs  mod.rs  session.rs  session_request.rs
src/management_keys/: mod.rs
src/management_keys/providers/: mod.rs  openrouter.rs
