[package]
name = "kv"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kv"
path = "src/main.rs"

[dependencies]
clap        = { version = "4", features = ["derive", "env"] }
reqwest     = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
toml        = "0.8"
tokio       = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
anyhow      = "1"
dirs        = "5"
rpassword   = "7"
tabled      = "0.15"
qrcode      = "0.14"
p256        = { version = "0.13", features = ["pkcs8", "pem"] }
base64      = "0.22"
rand_core   = { version = "0.6", features = ["getrandom"] }
